# cppjit

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: cli.hpp  kekek.cpp  main.cpp  utils.hpp
src/ast/: asm.hpp  asm_stm_t.cpp  asm_stm_t.hpp  ast.hpp  attribute.hpp  base.hpp  base_ast.hpp  base_node.hpp  class.cpp  class.hpp  defenition.hpp  fat_pointer.hpp  fd_type_t.cpp  fd_type_t.hpp  fd_types.hpp  func.hpp  func_body_t.cpp  func_body_t.hpp  func_signature_t.cpp  func_signature_t.hpp  iterators.h  iterators.hpp  jump_stm.hpp  jump_t.cpp  jump_t.hpp  literal_t.cpp  literal_t.hpp  member_fun_t.cpp  member_fun_t.hpp  operators.hpp  opt.hpp  scope.cpp  scope.hpp  some.hpp  statement_t.hpp  template_func_t.cpp  template_func_t.hpp
src/parser/: Makefile  ast_builder.hpp  ast_dump.hpp  lexer.l  parser.y
src/profiler /: some.hpp
src/runtime/: ast_consumer.hpp  base.hpp  dynlib_manager.hpp  memory_layout.hpp  operator_executor.hpp  opt.hpp  router.hpp  rt_dylib_caller.hpp  runtime.hpp
src/runtime/azazaza/: dynlib_manager.hpp  kekekek.cpp  memory_layout.hpp
tests/: just_main.cpp
